<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudentsYard</string>
    <string name="parse_app_id">0VmO9KjV0hrEnabdvwyKGDs4pATtfItSmyI885aO</string>
    <string name="parse_client_key">SOk2GiscBAM9DSD0fOSGO8LB7NikPohrHiHlJMtZ</string>

    <!-- Preferences -->

    <string-array name="updateInterval">
        <item name="1000">Every 1 second</item>
        <item name="5000">Every 5 seconds</item>
        <item name="30000">Every 30 seconds</item>
        <item name="60000">Every 1 minute</item>
        <item name="300000">Every 5 minutes</item>
    </string-array>
    <string-array name="updateIntervalValues">
        <item name="1000">1000</item>
        <item name="5000">5000</item>
        <item name="30000">30000</item>
        <item name="60000">60000</item>
        <item name="300000">300000</item>
    </string-array>

    <!-- log in activity -->
    <string name="action_signup">SIGN UP</string>
    <string name="Login">Log in</string>
    <string name="action_Guest">Log in as a guest</string>
    <string name="OR">OR</string>
    
    <!-- main activity -->
    <string name="action_settings">Settings</string>
    <string name="Register">Register</string>
    <string name="Guest">Guest</string>
    <string name="prompt_first_name">User Name</string>
    <string name="prompt_phone_num">Phone Number</string>
    <string name="menuitem_refresh">Refresh</string>
    <string name="action_register">Register</string>

    <!-- selection -->

    <string name="selctionLabel">Make a Selection:</string>
    <string name="looking_for_book">Looking for a book</string>
    <string name="adver_book">Advertising a book</string>
    <string name="explore">Explore advertisement</string>
    <string name="title_activity_looking_for_abook">LookingForABook</string>
    <string name="title_activity_advertise_abook">AdvertiseABook</string>
    <string name="title_activity_explore">Explore</string>

    <!-- looking -->

    <string name="UniversityLabel">Select a University:</string>
    <string name="University_prompt">Select a University</string>
    <string name="FacultyLabel">Select a Facualty:</string>
    <string name="explore_button">Explore</string>
    <string name="departmentLabel">Select a Department:</string>
    <string name="title_activity_explorer">Explorer</string>
    <string name="courseCodeLabel">Select a Course Code:</string>
    <string name="action_logout">Logout</string>
    <string name="provinceLabel">Select a Province:</string>
    <string name="city_Label">Select a City:</string>

    <!-- explorer -->

    <string name="explorerLabel"></string>
    <string name="Num">#</string>
    <string name="advertise_button">Advertise</string>
    <string name="book_name">Book Name</string>
    <string name="book_cond">Book Condition</string>
    <string name="book_Price">Price</string>
    <string name="title_activity_summary">Summary</string>
    <string name="summary_button">Continue</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="chooser_title">Share via</string>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->

    <string-array name="menu">
        <item>Share</item>
    </string-array>

    <!-- my posting menu -->
    <string-array name="posting_menu">
        <item>Share</item>
        <item>Delete</item>
        <item>Edit</item>
    </string-array>

    <string name="title_activity_register_room">RegisterRoomActivity</string>

    <!-- room strings -->
    <string name="prompt_title">Title</string>
    <string name="prompt_location">Postal Code (A1B2C3)</string>
    <string name="prompt_description">Description</string>
    <string name="add_room">Advertise</string>
    <string name="title_activity_starter_application">StarterApplication</string>

    <string name="hello_world">Hello world!</string>

</resources>