<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/explorButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/android"
    tools:context=".LookingForABook" >

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/summary"
        android:layout_centerHorizontal="true"
        android:prompt="@string/University_prompt" />

    <Spinner
        android:id="@+id/Spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_below="@+id/textView2"
        android:prompt="@string/University_prompt" />

    <Spinner
        android:id="@+id/Spinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Spinner2"
        android:layout_below="@+id/TextView3"
        android:prompt="@string/University_prompt" />

    <Button
        android:id="@+id/advertise_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Spinner3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/advertise_button" />

    <TextView
        android:id="@+id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="13dp"
        
        android:text="@string/UniversityLabel"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_below="@+id/spinner1"
        android:layout_marginTop="21dp"
        android:text="@string/FacultyLabel"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/Spinner01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView04"
        android:layout_below="@+id/TextView04"
        android:prompt="@string/University_prompt" />

    <EditText
        android:id="@+id/book_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Spinner01"
        android:layout_alignRight="@+id/Spinner01"
        android:layout_below="@+id/Spinner01"
        android:ems="10"
        android:hint="@string/book_name"
        android:textColorHint="#FFFFFFFF"
        android:inputType="textAutoCorrect|textAutoComplete" />

    <TextView
        android:id="@+id/TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Spinner3"
        android:layout_below="@+id/Spinner2"
        android:layout_marginTop="26dp"
        android:text="@string/departmentLabel"
         
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Spinner3"
        android:layout_below="@+id/Spinner3"
        android:layout_marginTop="23dp"
    
        android:text="@string/courseCodeLabel"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/book_price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/book_cond_text"
       
        android:layout_below="@+id/book_cond_text"
        android:ems="10"
        android:hint="@string/book_Price"
        android:textColorHint="#FFFFFFFF"
        android:inputType="number" />

    <EditText
        android:id="@+id/book_cond_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/book_name_text"
        android:layout_alignRight="@+id/book_name_text"
        android:layout_below="@+id/book_name_text"
        android:ems="10"
        android:hint="@string/book_cond"
        android:textColorHint="#FFFFFFFF"
        android:inputType="textAutoCorrect|textAutoComplete" >

        <requestFocus />
    </EditText>

</RelativeLayout>