<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android" >
    
      <Button
          android:id="@+id/rm_explore_btn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_alignParentLeft="true"
          android:layout_alignParentRight="true"
          android:text="@string/explore_button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rm_spinner1"
        android:layout_marginTop="30dp"
        android:text="@string/city_Label"
 
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="57dp"
        android:text="@string/provinceLabel"
   
        android:textSize="25sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/rm_Spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:prompt="@string/University_prompt" />

    <Spinner
        android:id="@+id/rm_spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/summary"
        android:layout_below="@+id/summary"
        android:prompt="@string/University_prompt" />
    

</RelativeLayout>
