<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterRoomActivity" >

    <EditText
        android:id="@+id/adv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="28dp"
         android:textColorHint="#FFFFFFFF"
         android:hint="@string/prompt_title"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/adv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/adv_title"
        android:layout_alignRight="@+id/adv_title"
        android:layout_below="@+id/adv_title"
         android:textColorHint="#FFFFFFFF"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/prompt_location" />

    <EditText
        android:id="@+id/adv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/adv_location"
        android:layout_alignRight="@+id/adv_location"
        android:layout_below="@+id/adv_location"
        android:layout_marginTop="20dp"
         android:textColorHint="#FFFFFFFF"
        android:ems="10"
        android:hint="@string/book_Price"
        android:inputType="number" />

    <Button
        android:id="@+id/rm_advertise_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/adv_desc"
        android:text="@string/add_room" />

    <EditText
        android:id="@+id/adv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/adv_price"
        android:layout_alignRight="@+id/adv_price"
        android:layout_below="@+id/adv_price"
        android:layout_marginTop="18dp"
         android:textColorHint="#FFFFFFFF"
        android:ems="10"
        android:hint="@string/prompt_description"
        android:inputType="textMultiLine" />

</RelativeLayout>
