<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/explorButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/android"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LookingForABook" >

    <Button
        android:id="@+id/rm_advertise_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Spinner3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/explore_button" />

    <TextView
        android:id="@+id/TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Spinner04"
        android:layout_below="@+id/Spinner2"
        android:layout_marginTop="34dp"
        android:text="@string/departmentLabel"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Spinner04"
        android:layout_below="@+id/Spinner3"
        android:layout_marginTop="33dp"
        android:text="@string/courseCodeLabel"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView3"
        android:layout_below="@+id/spinner1"
        android:layout_marginTop="30dp"
        android:text="@string/FacultyLabel"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="57dp"
        android:text="@string/UniversityLabel"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/Spinner04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/TextView4"
        android:prompt="@string/University_prompt" />

    <Spinner
        android:id="@+id/Spinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView3"
        android:layout_below="@+id/TextView3"
        android:prompt="@string/University_prompt" />

    <Spinner
        android:id="@+id/Spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:prompt="@string/University_prompt" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/summary"
        android:layout_below="@+id/summary"
        android:prompt="@string/University_prompt" />

</RelativeLayout>