<RelativeLayout 
    android:background="@drawable/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    <!--  android:background="#0099cc"    android:textColor="#33b5e5"-->

    <TextView
        android:id="@+id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/selctionLabel"
       
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/look_for_book_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/adv_book_button"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/summary"
        android:layout_marginTop="43dp"
        android:text="@string/looking_for_book" />

    <Button
        android:id="@+id/adv_book_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/look_for_book_button"
        android:layout_marginTop="24dp"
        android:text="@string/adver_book" />

</RelativeLayout>